# Fixed-Solutions-OpenData-Internship

./: .env.example  .env.production.example  .gitignore  README.md  dryrun-output.txt  dryrun-output2.txt  error.txt  package-lock.json  rendered-output.yaml  requirements.txt
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  test.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  logging_config.py  metrics.py  security.py
backend/app/ingestion/: models.py  router.py  schemas.py  tasks.py
backend/app/ingestion/pipeline/: __init__.py  chunker.py  embedder.py  extractor.py  indexer.py
backend/app/models/: __init__.py  domain.py  user.py
backend/app/models/db/: models.py
backend/app/models/schemas/: auth.py  ingest.py  query.py
backend/app/repositories/: document_repository.py
backend/app/schemas/: document.py  domain.py  ingest.py  query.py  user.py
backend/app/services/: domain_service.py
backend/app/services/evaluation/: judge.py  regression.py
backend/app/services/graph/: age_client.py  extractor.py  ontology_builder.py  ontology_loader.py
backend/app/utils/: seed.py
backend/app/workers/: celery_app.py  observability.py  tasks.py
backend/scripts/: reindex_qdrant.py
backend/scrpits/: index_node_uuid.py  ontology_seed.cypher  seed_graph.py
backend/tests/: pytest.ini  smoke_test.py
backend/tests/performance/: locust.py
backend/tests/unit/: test_judge_service.py  test_llm_router.py  test_retrieval_pipeline.py
docs/: auth-domain-management.md
(+151 files in other folders)
